separate variable declaration

--- a/aula-1/conteudo-teorico.ipynb
+++ b/aula-1/conteudo-teorico.ipynb
@@ -63,7 +63,7 @@
         "resultado_soma = soma_ate_n(N)\n",
         "print(f\"A soma dos números de 1 a {N} é: {resultado_soma}\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "print(f\"A lista é: {numeros_vazios}\")\n",
         "print(f\"O maior número na lista é: {maior_numero}\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,30 +256,6 @@
       "source": [
         "# Variáveis e Estruturas de Dados em Python\n",
         "\n",
-        "## Declaração de Variáveis\n",
-        "\n",
-        "Em Python, declarar uma variável é simplesmente atribuir um valor a um nome. Diferente de muitas outras linguagens de programação, você não precisa declarar explicitamente o tipo de dado da variável antes de usá-la. O Python utiliza **tipagem dinâmica**, o que significa que o tipo da variável é determinado em tempo de execução, com base no valor que lhe é atribuído.\n",
-        "python\n",
-        "# Exemplo de declaração de variáveis\n",
-        "nome = \"Alice\"  # Variável do tipo string\n",
-        "idade = 30      # Variável do tipo inteiro\n",
-        "altura = 1.75   # Variável do tipo float\n",
-        "is_estudante = True # Variável do tipo booleano\n",
-        "\n",
-        "print(f\"Nome: {nome}, Tipo: {type(nome)}\")\n",
-        "print(f\"Idade: {idade}, Tipo: {type(idade)}\")\n",
-        "print(f\"Altura: {altura}, Tipo: {type(altura)}\")\n",
-        "print(f\"É estudante: {is_estudante}, Tipo: {type(is_estudante)}\")\n",
-        "\n",
-        "Você pode reatribuir valores a variáveis, e o tipo da variável pode mudar dinamicamente:\n",
-        "python\n",
-        "# Reatribuindo um valor e mudando o tipo\n",
-        "valor = 10\n",
-        "print(f\"Valor inicial: {valor}, Tipo: {type(valor)}\")\n",
-        "\n",
-        "valor = \"dez\"\n",
-        "print(f\"Valor reatribuído: {valor}, Tipo: {type(valor)}\")\n",
-        "\n",
         "## Estruturas de Dados Nativas do Python\n",
         "\n",
         "Python oferece várias estruturas de dados nativas que são fundamentais para organizar e manipular coleções de dados.\n",
@@ -345,17 +321,6 @@
         "conjunto_sem_duplicados = set(lista_com_duplicados)\n",
         "print(f\"Lista original: {lista_com_duplicados}\")\n",
         "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "b25ead19"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The previous markdown cell was created successfully, explaining variable declaration and data structures. Now, create a code cell to execute the Python examples presented in the markdown cell to demonstrate variable declaration and the usage of lists, tuples, dictionaries, and sets.\n",
-        "\n"
       ]
     },
     {
@@ -437,7 +402,7 @@
         "print(f\"Lista original: {lista_com_duplicados}\")\n",
         "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,11 +438,54 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Declaração de Variáveis\n",
+        "Em Python, declarar uma variável é simplesmente atribuir um valor a um nome. Diferente de muitas outras linguagens de programação, você não precisa declarar explicitamente o tipo de dado da variável antes de usá-la. O Python utiliza tipagem dinâmica, o que significa que o tipo da variável é determinado em tempo de execução, com base no valor que lhe é atribuído."
+      ],
+      "metadata": {
+        "id": "KsnEu8yWu8yK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = \"Alice\" # Variável do tipo string\n",
+        "idade = 30 # Variável do tipo inteiro\n",
+        "altura = 1.75 # Variável do tipo float\n",
+        "is_estudante = True # Variável do tipo booleano\n",
+        "\n",
+        "print(\"Nome: \" + nome)\n",
+        "print(\"Idade: \" + str(idade))\n",
+        "print(\"Altura: \" + str(altura))\n",
+        "print(\"É estudante: \" + str(is_estudante))"
+      ],
+      "metadata": {
+        "id": "IuQMVaeVvGsN",
+        "outputId": "cc92415d-d2ff-44de-a263-96fa139d9c80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nome: Alice\n",
+            "Idade: 30\n",
+            "Altura: 1.75\n",
+            "É estudante: True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0c43a3e4"
       },
       "source": [
-        "%%markdown\n",
         "# Estruturas de Controle e Funções\n",
         "\n",
         "Em Python, as estruturas de controle nos permitem alterar o fluxo de execução do programa com base em condições ou para repetir blocos de código. Funções nos permitem agrupar código em blocos reutilizáveis.\n",
@@ -657,7 +665,7 @@
         "resultado = somar(5, 3)\n",
         "print(f\"A soma é: {resultado}\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
