separação das estruturas de dados em células apartadas

--- a/aula-1/conteudo-teorico.ipynb
+++ b/aula-1/conteudo-teorico.ipynb
@@ -256,184 +256,8 @@
       "source": [
         "# Variáveis e Estruturas de Dados em Python\n",
         "\n",
-        "## Estruturas de Dados Nativas do Python\n",
         "\n",
-        "Python oferece várias estruturas de dados nativas que são fundamentais para organizar e manipular coleções de dados.\n",
-        "\n",
-        "### Listas (Lists)\n",
-        "\n",
-        "*   **Característica Principal:** Coleção ordenada, mutável e que permite elementos duplicados. As listas são definidas por colchetes `[]`.\n",
-        "*   **Uso:** Ideal para coleções de itens onde a ordem importa e os elementos podem mudar.\n",
-        "python\n",
-        "# Exemplo de Lista\n",
-        "frutas = [\"maçã\", \"banana\", \"cereja\", \"maçã\"]\n",
-        "print(f\"Lista de frutas: {frutas}\")\n",
-        "print(f\"Primeira fruta: {frutas[0]}\")\n",
-        "frutas.append(\"laranja\") # Adicionando um elemento\n",
-        "print(f\"Lista após adicionar: {frutas}\")\n",
-        "frutas[1] = \"uva\" # Modificando um elemento\n",
-        "print(f\"Lista após modificar: {frutas}\")\n",
-        "\n",
-        "### Tuplas (Tuples)\n",
-        "\n",
-        "*   **Característica Principal:** Coleção ordenada, imutável e que permite elementos duplicados. As tuplas são definidas por parênteses `()`.\n",
-        "*   **Uso:** Usada para coleções de itens que não devem ser alterados.\n",
-        "python\n",
-        "# Exemplo de Tupla\n",
-        "coordenadas = (10.0, 20.0)\n",
-        "print(f\"Coordenadas: {coordenadas}\")\n",
-        "print(f\"Latitude: {coordenadas[0]}\")\n",
-        "# coordenadas[0] = 15.0 # Isso geraria um erro, pois tuplas são imutáveis\n",
-        "\n",
-        "### Dicionários (Dictionaries)\n",
-        "\n",
-        "*   **Característica Principal:** Coleção não ordenada (em versões mais antigas do Python, ordenada a partir do Python 3.7), mutável, que armazena dados em pares de chave-valor. As chaves devem ser únicas e imutáveis. Os dicionários são definidos por chaves `{}`.\n",
-        "*   **Uso:** Ideal para representar dados estruturados onde cada valor está associado a uma chave única.\n",
-        "python\n",
-        "# Exemplo de Dicionário\n",
-        "pessoa = {\n",
-        "    \"nome\": \"Maria\",\n",
-        "    \"idade\": 25,\n",
-        "    \"cidade\": \"São Paulo\"\n",
-        "}\n",
-        "print(f\"Dicionário pessoa: {pessoa}\")\n",
-        "print(f\"Nome da pessoa: {pessoa['nome']}\")\n",
-        "pessoa[\"idade\"] = 26 # Modificando um valor\n",
-        "pessoa[\"profissão\"] = \"Engenheira\" # Adicionando um novo par chave-valor\n",
-        "print(f\"Dicionário após modificações: {pessoa}\")\n",
-        "\n",
-        "### Conjuntos (Sets)\n",
-        "\n",
-        "*   **Característica Principal:** Coleção não ordenada, mutável e que **não permite** elementos duplicados. Os conjuntos são definidos por chaves `{}` (assim como dicionários, mas contendo apenas valores, não pares chave-valor) ou pela função `set()`.\n",
-        "*   **Uso:** Útil para operações matemáticas de conjunto (união, interseção, diferença) e para remover duplicados de uma coleção.\n",
-        "python\n",
-        "# Exemplo de Conjunto\n",
-        "numeros = {1, 2, 3, 2, 1, 4}\n",
-        "print(f\"Conjunto de números: {numeros}\") # Note que os duplicados foram removidos\n",
-        "\n",
-        "numeros.add(5) # Adicionando um elemento\n",
-        "print(f\"Conjunto após adicionar: {numeros}\")\n",
-        "numeros.remove(2) # Removendo um elemento\n",
-        "print(f\"Conjunto após remover: {numeros}\")\n",
-        "\n",
-        "# Convertendo uma lista com duplicados para um conjunto para remover duplicados\n",
-        "lista_com_duplicados = [10, 20, 30, 20, 10, 40]\n",
-        "conjunto_sem_duplicados = set(lista_com_duplicados)\n",
-        "print(f\"Lista original: {lista_com_duplicados}\")\n",
-        "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0c580f42",
-        "outputId": "0d4f3f9c-6fda-4a0b-e7bf-65fa6a44d6f0"
-      },
-      "source": [
-        "# Exemplo de declaração de variáveis\n",
-        "nome = \"Alice\"  # Variável do tipo string\n",
-        "idade = 30      # Variável do tipo inteiro\n",
-        "altura = 1.75   # Variável do tipo float\n",
-        "is_estudante = True # Variável do tipo booleano\n",
-        "\n",
-        "print(f\"Nome: {nome}, Tipo: {type(nome)}\")\n",
-        "print(f\"Idade: {idade}, Tipo: {type(idade)}\")\n",
-        "print(f\"Altura: {altura}, Tipo: {type(altura)}\")\n",
-        "print(f\"É estudante: {is_estudante}, Tipo: {type(is_estudante)}\")\n",
-        "\n",
-        "# Reatribuindo um valor e mudando o tipo\n",
-        "valor = 10\n",
-        "print(f\"Valor inicial: {valor}, Tipo: {type(valor)}\")\n",
-        "\n",
-        "valor = \"dez\"\n",
-        "print(f\"Valor reatribuído: {valor}, Tipo: {type(valor)}\")\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de Lista\n",
-        "frutas = [\"maçã\", \"banana\", \"cereja\", \"maçã\"]\n",
-        "print(f\"Lista de frutas: {frutas}\")\n",
-        "print(f\"Primeira fruta: {frutas[0]}\")\n",
-        "frutas.append(\"laranja\") # Adicionando um elemento\n",
-        "print(f\"Lista após adicionar: {frutas}\")\n",
-        "frutas[1] = \"uva\" # Modificando um elemento\n",
-        "print(f\"Lista após modificar: {frutas}\")\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de Tupla\n",
-        "coordenadas = (10.0, 20.0)\n",
-        "print(f\"Coordenadas: {coordenadas}\")\n",
-        "print(f\"Latitude: {coordenadas[0]}\")\n",
-        "# A linha abaixo é comentada porque geraria um erro, demonstrando imutabilidade\n",
-        "# coordenadas[0] = 15.0\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de Dicionário\n",
-        "pessoa = {\n",
-        "    \"nome\": \"Maria\",\n",
-        "    \"idade\": 25,\n",
-        "    \"cidade\": \"São Paulo\"\n",
-        "}\n",
-        "print(f\"Dicionário pessoa: {pessoa}\")\n",
-        "print(f\"Nome da pessoa: {pessoa['nome']}\")\n",
-        "pessoa[\"idade\"] = 26 # Modificando um valor\n",
-        "pessoa[\"profissão\"] = \"Engenheira\" # Adicionando um novo par chave-valor\n",
-        "print(f\"Dicionário após modificações: {pessoa}\")\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de Conjunto\n",
-        "numeros = {1, 2, 3, 2, 1, 4}\n",
-        "print(f\"Conjunto de números: {numeros}\") # Note que os duplicados foram removidos\n",
-        "\n",
-        "numeros.add(5) # Adicionando um elemento\n",
-        "print(f\"Conjunto após adicionar: {numeros}\")\n",
-        "numeros.remove(2) # Removendo um elemento\n",
-        "print(f\"Conjunto após remover: {numeros}\")\n",
-        "\n",
-        "# Convertendo uma lista com duplicados para um conjunto para remover duplicados\n",
-        "lista_com_duplicados = [10, 20, 30, 20, 10, 40]\n",
-        "conjunto_sem_duplicados = set(lista_com_duplicados)\n",
-        "print(f\"Lista original: {lista_com_duplicados}\")\n",
-        "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nome: Alice, Tipo: <class 'str'>\n",
-            "Idade: 30, Tipo: <class 'int'>\n",
-            "Altura: 1.75, Tipo: <class 'float'>\n",
-            "É estudante: True, Tipo: <class 'bool'>\n",
-            "Valor inicial: 10, Tipo: <class 'int'>\n",
-            "Valor reatribuído: dez, Tipo: <class 'str'>\n",
-            "--------------------\n",
-            "Lista de frutas: ['maçã', 'banana', 'cereja', 'maçã']\n",
-            "Primeira fruta: maçã\n",
-            "Lista após adicionar: ['maçã', 'banana', 'cereja', 'maçã', 'laranja']\n",
-            "Lista após modificar: ['maçã', 'uva', 'cereja', 'maçã', 'laranja']\n",
-            "--------------------\n",
-            "Coordenadas: (10.0, 20.0)\n",
-            "Latitude: 10.0\n",
-            "--------------------\n",
-            "Dicionário pessoa: {'nome': 'Maria', 'idade': 25, 'cidade': 'São Paulo'}\n",
-            "Nome da pessoa: Maria\n",
-            "Dicionário após modificações: {'nome': 'Maria', 'idade': 26, 'cidade': 'São Paulo', 'profissão': 'Engenheira'}\n",
-            "--------------------\n",
-            "Conjunto de números: {1, 2, 3, 4}\n",
-            "Conjunto após adicionar: {1, 2, 3, 4, 5}\n",
-            "Conjunto após remover: {1, 3, 4, 5}\n",
-            "Lista original: [10, 20, 30, 20, 10, 40]\n",
-            "Conjunto sem duplicados: {40, 10, 20, 30}\n"
-          ]
-        }
+        "\n"
       ]
     },
     {
@@ -466,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,6 +303,166 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Estruturas de Dados Nativas do Python\n",
+        "\n",
+        "Python oferece várias estruturas de dados nativas que são fundamentais para organizar e manipular coleções de dados."
+      ],
+      "metadata": {
+        "id": "R9Wg9WpnNLPf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Listas (Lists)\n",
+        "\n",
+        "*   **Característica Principal:** Coleção ordenada, mutável e que permite elementos duplicados. As listas são definidas por colchetes `[]`.\n",
+        "*   **Uso:** Ideal para coleções de itens onde a ordem importa e os elementos podem mudar.\n"
+      ],
+      "metadata": {
+        "id": "yaNepSIiLhBb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas = [\"maçã\", \"banana\", \"cereja\", \"maçã\"]\n",
+        "print(f\"Lista de frutas: {frutas}\")\n",
+        "print(f\"Primeira fruta: {frutas[0]}\")\n",
+        "frutas.append(\"laranja\") # Adicionando um elemento\n",
+        "print(f\"Lista após adicionar: {frutas}\")\n",
+        "frutas[1] = \"uva\" # Modificando um elemento\n",
+        "print(f\"Lista após modificar: {frutas}\")"
+      ],
+      "metadata": {
+        "id": "yoXAbnmYL-2u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tuplas (Tuples)\n",
+        "\n",
+        "*   **Característica Principal:** Coleção ordenada, imutável e que permite elementos duplicados. As tuplas são definidas por parênteses `()`.\n",
+        "*   **Uso:** Usada para coleções de itens que não devem ser alterados.\n",
+        "python\n"
+      ],
+      "metadata": {
+        "id": "TWnJu1j0LmP6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coordenadas = (10.0, 20.0)\n",
+        "print(\"Coordenadas: \" + str(coordenadas))\n",
+        "print(\"Latitude: \" + str(coordenadas[0]))\n",
+        "# coordenadas[0] = 15.0 # Isso geraria um erro, pois tuplas são imutáveis"
+      ],
+      "metadata": {
+        "id": "yiwIlg2xMIG8",
+        "outputId": "3038a373-0279-44d3-9e74-d12024f3c233",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Coordenadas: (10.0, 20.0)\n",
+            "Latitude: 10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dicionários (Dictionaries)\n",
+        "\n",
+        "*   **Característica Principal:** Coleção mutável, que armazena dados em pares de chave-valor. As chaves devem ser únicas e imutáveis. Os dicionários são definidos por chaves `{}`.\n",
+        "*   **Uso:** Ideal para representar dados estruturados onde cada valor está associado a uma chave única.\n",
+        "python\n"
+      ],
+      "metadata": {
+        "id": "dWNrajq3Lr7B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pessoa = {\n",
+        "    \"nome\": \"Maria\",\n",
+        "    \"idade\": 25,\n",
+        "    \"cidade\": \"São Paulo\"\n",
+        "}\n",
+        "print(f\"Dicionário pessoa: {pessoa}\")\n",
+        "print(f\"Nome da pessoa: {pessoa['nome']}\")\n",
+        "pessoa[\"idade\"] = 26 # Modificando um valor\n",
+        "pessoa[\"profissão\"] = \"Engenheira\" # Adicionando um novo par chave-valor\n",
+        "print(f\"Dicionário após modificações: {pessoa}\")"
+      ],
+      "metadata": {
+        "id": "7dJlFTElMneZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conjuntos (Sets)\n",
+        "\n",
+        "*   **Característica Principal:** Coleção não ordenada, mutável e que **não permite** elementos duplicados. Os conjuntos são definidos por chaves `{}` (assim como dicionários, mas contendo apenas valores, não pares chave-valor) ou pela função `set()`.\n",
+        "*   **Uso:** Útil para operações matemáticas de conjunto (união, interseção, diferença) e para remover duplicados de uma coleção.\n",
+        "python\n"
+      ],
+      "metadata": {
+        "id": "qvttgSc2Lxje"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exemplo de Conjunto\n",
+        "numeros = {1, 2, 3, 2, 1, 4}\n",
+        "print(f\"Conjunto de números: {numeros}\") # Note que os duplicados foram removidos\n",
+        "\n",
+        "numeros.add(5) # Adicionando um elemento\n",
+        "print(f\"Conjunto após adicionar: {numeros}\")\n",
+        "numeros.remove(2) # Removendo um elemento\n",
+        "print(f\"Conjunto após remover: {numeros}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5y-YyZqBM3Ic"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convertendo uma lista com duplicados para um conjunto para remover duplicados\n",
+        "lista_com_duplicados = [10, 20, 30, 20, 10, 40]\n",
+        "conjunto_sem_duplicados = set(lista_com_duplicados)\n",
+        "print(f\"Lista original: {lista_com_duplicados}\")\n",
+        "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
+      ],
+      "metadata": {
+        "id": "rRBO4ck5M4oV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
