separando estruturas de repetição em células apartadas

--- a/aula-1/conteudo-teorico.ipynb
+++ b/aula-1/conteudo-teorico.ipynb
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f446b023",
-        "outputId": "f75949ce-c2d2-420c-ec89-a980eda2fbbf"
+        "outputId": "39208881-0d36-4149-cbb5-59ae59422962"
       },
       "source": [
         "# Algoritmo para calcular a soma dos números de 1 a N\n",
@@ -63,7 +63,7 @@
         "resultado_soma = soma_ate_n(N)\n",
         "print(f\"A soma dos números de 1 a {N} é: {resultado_soma}\")"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96897e70",
-        "outputId": "a39d653a-32ed-4ee2-fd5e-50ea9bd44951"
+        "outputId": "ac232ae4-d59e-4cff-ffe1-00b1e5a84f0e"
       },
       "source": [
         "# Algoritmo para encontrar o maior número em uma lista\n",
@@ -108,7 +108,7 @@
         "print(f\"A lista é: {numeros_vazios}\")\n",
         "print(f\"O maior número na lista é: {maior_numero}\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,12 +285,12 @@
       ],
       "metadata": {
         "id": "IuQMVaeVvGsN",
-        "outputId": "cc92415d-d2ff-44de-a263-96fa139d9c80",
+        "outputId": "944387a1-05d6-4533-daba-501c12956c44",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,10 +339,25 @@
         "print(f\"Lista após modificar: {frutas}\")"
       ],
       "metadata": {
-        "id": "yoXAbnmYL-2u"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yoXAbnmYL-2u",
+        "outputId": "eb1f4e6b-724a-4efc-c87c-dc961596092f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lista de frutas: ['maçã', 'banana', 'cereja', 'maçã']\n",
+            "Primeira fruta: maçã\n",
+            "Lista após adicionar: ['maçã', 'banana', 'cereja', 'maçã', 'laranja']\n",
+            "Lista após modificar: ['maçã', 'uva', 'cereja', 'maçã', 'laranja']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -366,13 +381,13 @@
         "# coordenadas[0] = 15.0 # Isso geraria um erro, pois tuplas são imutáveis"
       ],
       "metadata": {
-        "id": "yiwIlg2xMIG8",
-        "outputId": "3038a373-0279-44d3-9e74-d12024f3c233",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yiwIlg2xMIG8",
+        "outputId": "30d78b88-350b-4e2f-e934-3b473fc3e61c"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,10 +427,24 @@
         "print(f\"Dicionário após modificações: {pessoa}\")"
       ],
       "metadata": {
-        "id": "7dJlFTElMneZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7dJlFTElMneZ",
+        "outputId": "e8ea5bb7-385a-409f-c2e5-89663589bd57"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dicionário pessoa: {'nome': 'Maria', 'idade': 25, 'cidade': 'São Paulo'}\n",
+            "Nome da pessoa: Maria\n",
+            "Dicionário após modificações: {'nome': 'Maria', 'idade': 26, 'cidade': 'São Paulo', 'profissão': 'Engenheira'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -444,10 +473,24 @@
         "\n"
       ],
       "metadata": {
-        "id": "5y-YyZqBM3Ic"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5y-YyZqBM3Ic",
+        "outputId": "7f49d317-4242-4274-c4b5-b20af500e12e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conjunto de números: {1, 2, 3, 4}\n",
+            "Conjunto após adicionar: {1, 2, 3, 4, 5}\n",
+            "Conjunto após remover: {1, 3, 4, 5}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -459,10 +502,23 @@
         "print(f\"Conjunto sem duplicados: {conjunto_sem_duplicados}\")"
       ],
       "metadata": {
-        "id": "rRBO4ck5M4oV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rRBO4ck5M4oV",
+        "outputId": "6cff4baf-23e2-4963-b523-40ff10ad951a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lista original: [10, 20, 30, 20, 10, 40]\n",
+            "Conjunto sem duplicados: {40, 10, 20, 30}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -470,10 +526,15 @@
         "id": "0c43a3e4"
       },
       "source": [
-        "# Estruturas de Controle e Funções\n",
+        "# Estruturas de Controle\n",
         "\n",
-        "Em Python, as estruturas de controle nos permitem alterar o fluxo de execução do programa com base em condições ou para repetir blocos de código. Funções nos permitem agrupar código em blocos reutilizáveis.\n",
-        "\n",
+        "Em Python, as estruturas de controle nos permitem alterar o fluxo de execução do programa com base em condições ou para repetir blocos de código.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Condicionais (if, elif, else)\n",
         "\n",
         "As estruturas condicionais permitem que você execute diferentes blocos de código com base se uma condição é verdadeira ou falsa.\n",
@@ -482,127 +543,16 @@
         "*   **`elif` (else if)**: Verifica uma nova condição se a condição `if` anterior (e quaisquer `elif`'s anteriores) for falsa.\n",
         "*   **`else`**: Executa um bloco de código se nenhuma das condições anteriores (`if` ou `elif`) for verdadeira.\n",
         "\n",
-        "**Sintaxe Básica:**\n",
-        "python\n",
-        "if condicao_1:\n",
-        "    # Código a ser executado se condicao_1 for verdadeira\n",
-        "    pass # 'pass' é usado como placeholder, remova em código real\n",
-        "elif condicao_2:\n",
-        "    # Código a ser executado se condicao_1 for falsa E condicao_2 for verdadeira\n",
-        "    pass\n",
-        "else:\n",
-        "    # Código a ser executado se todas as condições anteriores forem falsas\n",
-        "    pass\n",
         "\n",
-        "**Exemplo:**\n",
-        "python\n",
-        "idade = 18\n",
-        "\n",
-        "if idade < 13:\n",
-        "    print(\"Você é uma criança.\")\n",
-        "elif idade < 18:\n",
-        "    print(\"Você é um adolescente.\")\n",
-        "else:\n",
-        "    print(\"Você é um adulto.\")\n",
-        "\n",
-        "## Estruturas de Repetição (for, while)\n",
-        "\n",
-        "As estruturas de repetição, ou loops, permitem que você execute um bloco de código múltiplas vezes.\n",
-        "\n",
-        "### `for` Loop\n",
-        "\n",
-        "O `for` loop é usado para iterar sobre uma sequência (como uma lista, tupla, string ou range).\n",
-        "\n",
-        "**Sintaxe Básica:**\n",
-        "python\n",
-        "for elemento in sequencia:\n",
-        "    # Código a ser executado para cada elemento na sequência\n",
-        "    pass\n",
-        "\n",
-        "**Exemplo:**\n",
-        "python\n",
-        "frutas = [\"maçã\", \"banana\", \"cereja\"]\n",
-        "\n",
-        "for fruta in frutas:\n",
-        "    print(f\"Eu gosto de {fruta}\")\n",
-        "\n",
-        "# Iterando sobre um range de números\n",
-        "for i in range(5): # range(5) gera uma sequência de 0 a 4\n",
-        "    print(f\"Contagem: {i}\")\n",
-        "\n",
-        "### `while` Loop\n",
-        "\n",
-        "O `while` loop executa um bloco de código enquanto uma condição for verdadeira.\n",
-        "\n",
-        "**Sintaxe Básica:**\n",
-        "python\n",
-        "while condicao:\n",
-        "    # Código a ser executado enquanto a condição for verdadeira\n",
-        "    # Lembre-se de incluir algo que eventualmente torne a condição falsa para evitar loops infinitos!\n",
-        "    pass\n",
-        "\n",
-        "**Exemplo:**\n",
-        "python\n",
-        "contador = 0\n",
-        "\n",
-        "while contador < 5:\n",
-        "    print(f\"Contador: {contador}\")\n",
-        "    contador += 1 # Incrementa o contador para eventualmente parar o loop\n",
-        "\n",
-        "## Funções\n",
-        "\n",
-        "Funções são blocos de código organizado e reutilizável que realizam uma tarefa específica. Elas ajudam a dividir programas grandes em partes menores e mais gerenciáveis, tornando o código mais legível e fácil de manter.\n",
-        "\n",
-        "**Sintaxe Básica:**\n",
-        "python\n",
-        "def nome_da_funcao(parametros):\n",
-        "    \"\"\"Docstring: Explica o que a função faz.\"\"\"\n",
-        "    # Corpo da função\n",
-        "    # Faça algo com os parâmetros\n",
-        "    # Opcionalmente, retorne um valor\n",
-        "    return valor_de_retorno\n",
-        "\n",
-        "**Exemplo:**\n",
-        "python\n",
-        "def saudar(nome):\n",
-        "    \"\"\"Esta função saúda a pessoa passada como parâmetro.\"\"\"\n",
-        "    print(f\"Olá, {nome}!\")\n",
-        "\n",
-        "# Chamando a função\n",
-        "saudar(\"Alice\")\n",
-        "saudar(\"Bob\")\n",
-        "\n",
-        "def somar(a, b):\n",
-        "    \"\"\"Esta função retorna a soma de dois números.\"\"\"\n",
-        "    return a + b\n",
-        "\n",
-        "# Chamando a função e armazenando o resultado\n",
-        "resultado = somar(5, 3)\n",
-        "print(f\"A soma é: {resultado}\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ec3b3bfb"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "Execute the code examples provided in the markdown cell to demonstrate conditional statements, loops, and functions.\n",
         "\n"
-      ]
+      ],
+      "metadata": {
+        "id": "c-OKTVUtO1ZS"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4ead3bb3",
-        "outputId": "f4ce6c75-567b-4dc1-b1a6-85405f491e71"
-      },
       "source": [
-        "# Exemplo de Condicionais\n",
         "idade = 18\n",
         "\n",
         "if idade < 13:\n",
@@ -610,71 +560,146 @@
         "elif idade < 18:\n",
         "    print(\"Você é um adolescente.\")\n",
         "else:\n",
-        "    print(\"Você é um adulto.\")\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de for Loop\n",
-        "frutas = [\"maçã\", \"banana\", \"cereja\"]\n",
-        "\n",
-        "for fruta in frutas:\n",
-        "    print(f\"Eu gosto de {fruta}\")\n",
-        "\n",
-        "for i in range(5):\n",
-        "    print(f\"Contagem: {i}\")\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de while Loop\n",
-        "contador = 0\n",
-        "\n",
-        "while contador < 5:\n",
-        "    print(f\"Contador: {contador}\")\n",
-        "    contador += 1\n",
-        "\n",
-        "print(\"-\" * 20) # Separador para clareza\n",
-        "\n",
-        "# Exemplo de Funções\n",
-        "def saudar(nome):\n",
-        "    \"\"\"Esta função saúda a pessoa passada como parâmetro.\"\"\"\n",
-        "    print(f\"Olá, {nome}!\")\n",
-        "\n",
-        "saudar(\"Alice\")\n",
-        "saudar(\"Bob\")\n",
-        "\n",
-        "def somar(a, b):\n",
-        "    \"\"\"Esta função retorna a soma de dois números.\"\"\"\n",
-        "    return a + b\n",
-        "\n",
-        "resultado = somar(5, 3)\n",
-        "print(f\"A soma é: {resultado}\")"
+        "    print(\"Você é um adulto.\")"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "7XRr_WhMPE7d",
+        "outputId": "8fa7a897-c6f7-4a7f-c6fb-b91a6f9863e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Você é um adulto.\n",
-            "--------------------\n",
+            "Você é um adulto.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Estruturas de Repetição (for, while)\n",
+        "\n",
+        "As estruturas de repetição, ou loops, permitem que você execute um bloco de código múltiplas vezes.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l-L8UjMOO43T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `for` Loop\n",
+        "\n",
+        "O `for` loop é usado para iterar sobre uma sequência (como uma lista, tupla, string ou range).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YGMw8pRxO7qY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas = [\"maçã\", \"banana\", \"cereja\"]\n",
+        "\n",
+        "for fruta in frutas:\n",
+        "    print(f\"Eu gosto de {fruta}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ncE-dXN-PJMi",
+        "outputId": "55b66993-03a7-49bc-96c0-a0d52ff34f2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Eu gosto de maçã\n",
             "Eu gosto de banana\n",
-            "Eu gosto de cereja\n",
+            "Eu gosto de cereja\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterando sobre um range de números\n",
+        "for i in range(5): # range(5) gera uma sequência de 0 a 4\n",
+        "    print(f\"Contagem: {i}\")"
+      ],
+      "metadata": {
+        "id": "zk4DAYxMPKOF",
+        "outputId": "e7ccaf9f-0426-41c4-81f2-230a18cd59bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Contagem: 0\n",
             "Contagem: 1\n",
             "Contagem: 2\n",
             "Contagem: 3\n",
-            "Contagem: 4\n",
-            "--------------------\n",
+            "Contagem: 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `while` Loop\n",
+        "\n",
+        "O `while` loop executa um bloco de código enquanto uma condição for verdadeira.\n"
+      ],
+      "metadata": {
+        "id": "PAMiZni9O-hj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contador = 0\n",
+        "\n",
+        "while contador < 5:\n",
+        "    print(f\"Contador: {contador}\")\n",
+        "    contador += 1 # Incrementa o contador para eventualmente parar o loop"
+      ],
+      "metadata": {
+        "id": "Gql7EIYrPPy5",
+        "outputId": "56627c73-cb0c-4e11-dcac-ac5b2de090d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Contador: 0\n",
             "Contador: 1\n",
             "Contador: 2\n",
             "Contador: 3\n",
-            "Contador: 4\n",
-            "--------------------\n",
-            "Olá, Alice!\n",
-            "Olá, Bob!\n",
-            "A soma é: 8\n"
+            "Contador: 4\n"
           ]
         }
       ]
